--- a/app/Locale/rus/LC_MESSAGES/admin_akb.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_akb.po
@@ -72,6 +72,14 @@ msgid "label_height"
 msgstr "Высота"
 msgid "label_file"
 msgstr "Фото"
+msgid "label_color"
+msgstr "Технология изготовления"
+msgid "label_material"
+msgstr "Страна-производитель"
+msgid "label_price_with_exchange"
+msgstr "Цена с обменом (в формате 0.00)"
+msgid "label_stock_places"
+msgstr "Наличие на точках (разделять через '|', для пустых значений 0) порядок: Автодом|Тип-топ|Бам|АТП|Таксопарк|Вианор Вокзальное|Хендай|Таврида|Груз"
 msgid "message_items_not_found"
 msgstr "Аккумуляторы не найдены"
 msgid "message_item_deleted"
