--- a/app/Locale/rus/LC_MESSAGES/admin_akb.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_akb.po
@@ -102,3 +102,9 @@ msgid "message_data_cleared"
 msgstr "Данные удалены"
 msgid "label_not_show_price"
 msgstr "Не отображать цену на сайте"
+msgid "label_auto"
+msgstr "Тип авто"
+msgid "label_start_stop"
+msgstr "Технология Старт Стоп"
+msgid "label_warranty"
+msgstr "Гарантия"
