--- a/app/Locale/rus/LC_MESSAGES/admin_tyres.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_tyres.po
@@ -136,3 +136,13 @@ msgid "column_supplier_id"
 msgstr "Поставщик"
 msgid "label_not_show_price"
 msgstr "Не отображать цену на сайте"
+msgid "label_p1"
+msgstr "Бесплатный шиномонтаж"
+msgid "label_p2"
+msgstr "Бесплатное хранение"
+msgid "label_p3"
+msgstr "Расширенная гарантия"
+msgid "label_p4"
+msgstr "XL (Extra Load)"
+msgid "label_p5"
+msgstr "RUN FLAT"
