suppliers delivery time

--- a/app/Locale/rus/LC_MESSAGES/admin_suppliers.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_suppliers.po
@@ -40,3 +40,11 @@ msgid "message_item_saved"
 msgstr "Поставщик сохранён"
 msgid "error_item_not_saved"
 msgstr "Не удается сохранить поставщика"
+msgid "label_delivery_time_from"
+msgstr "Время доставки ОТ (дней)"
+msgid "acronym_delivery_time_from"
+msgstr "Время доставки ОТ (дней)"
+msgid "label_delivery_time_to"
+msgstr "Время доставки ДО (дней)"
+msgid "acronym_delivery_time_to"
+msgstr "Время доставки ДО (дней)"
