--- a/app/Locale/rus/LC_MESSAGES/admin_tyres.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_tyres.po
@@ -111,7 +111,9 @@ msgstr "Грузовые"
 msgid "auto_light_trucks"
 msgstr "Легкогрузовые"
 msgid "auto_special"
-msgstr "Спецтранспорт"
+msgstr "Индустриальная"
+msgid "auto_loader"
+msgstr "Погрузчики"
 msgid "auto_agricultural"
 msgstr "Сельхоз"
 msgid "season_summer"
