remove supplier button

--- a/app/Locale/rus/LC_MESSAGES/admin_disks.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_disks.po
@@ -94,6 +94,10 @@ msgid "message_data_saved"
 msgstr "Данные сохранены"
 msgid "message_data_cleared"
 msgstr "Данные удалены"
+msgid "message_supplier_data_cleared"
+msgstr "Данные поставщика удалены"
+msgid "message_fill_supplier"
+msgstr "Поставщик не выбран. Выберите поставщика и нажмите кнопку поиска"
 msgid "column_supplier_id"
 msgstr "Поставщик"
 msgid "material_steel"
