--- a/app/Locale/rus/LC_MESSAGES/admin_menu_sections.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_menu_sections.po
@@ -50,6 +50,8 @@ msgid "tyres_add"
 msgstr "Добавить"
 msgid "tyres_clear"
 msgstr "Удалить всё"
+msgid "tyres_clear_supplier"
+msgstr "Удалить выбранного поставщика"
 msgid "submenu_tubes"
 msgstr "Автокамеры"
 msgid "tubes_list"
@@ -66,6 +68,8 @@ msgid "disks_add"
 msgstr "Добавить"
 msgid "disks_clear"
 msgstr "Удалить всё"
+msgid "disks_clear_supplier"
+msgstr "Удалить выбранного поставщика"
 msgid "submenu_akb"
 msgstr "Аккумуляторы"
 msgid "akb_list"
