--- a/app/Locale/rus/LC_MESSAGES/admin_tyres.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_tyres.po
@@ -124,6 +124,10 @@ msgid "season_all"
 msgstr "Всесезонные"
 msgid "message_data_cleared"
 msgstr "Данные удалены"
+msgid "message_supplier_data_cleared"
+msgstr "Данные поставщика удалены"
+msgid "message_fill_supplier"
+msgstr "Поставщик не выбран. Выберите поставщика и нажмите кнопку поиска"
 msgid "type_car_tube"
 msgstr "автокамера"
 msgid "type_moto_tube"
