tubes images models

--- a/app/Locale/rus/LC_MESSAGES/admin_models.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_models.po
@@ -112,3 +112,5 @@ msgid "label_material"
 msgstr "Тип (для дисков)"
 msgid "label_auto"
 msgstr "Тип шин (для шин)"
+msgid "label_valve"
+msgstr "Вентили (для камер, инструкцию по заполнению смотри на странице импорта)"
