--- a/app/Locale/rus/LC_MESSAGES/admin_suppliers.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_suppliers.po
@@ -48,3 +48,5 @@ msgid "label_delivery_time_to"
 msgstr "Время доставки ДО (дней)"
 msgid "acronym_delivery_time_to"
 msgstr "Время доставки ДО (дней)"
+msgid "label_delivery_prefix"
+msgstr "Префикс (буквенное обозначение)"
