--- a/app/Locale/rus/LC_MESSAGES/admin_menu_sections.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_menu_sections.po
@@ -202,3 +202,11 @@ msgid "home_photos_add"
 msgstr "Добавить"
 msgid "section_service"
 msgstr "Управление"
+msgid "menu_tyre_prices"
+msgstr "Шиномонтаж (цены)"
+msgid "submenu_tyre_prices"
+msgstr "Шиномонтаж (цены)"
+msgid "tyre_prices_list"
+msgstr "Список"
+msgid "tyre_prices_add"
+msgstr "Добавить"
