--- a/app/Locale/rus/LC_MESSAGES/admin_suppliers.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_suppliers.po
@@ -24,6 +24,12 @@ msgid "acronym_title"
 msgstr "Название поставщика"
 msgid "error_title_empty"
 msgstr "укажите название"
+msgid "error_title_empty"
+msgstr "укажите название"
+msgid "error_time_from_empty"
+msgstr "укажите время (от)"
+msgid "error_time_to_empty"
+msgstr "укажите время (до)"
 msgid "message_items_not_found"
 msgstr "Поставщики не найдены"
 msgid "message_item_deleted"
