--- a/app/Locale/rus/LC_MESSAGES/admin_tyre_prices.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_tyre_prices.po
@@ -18,7 +18,17 @@ msgid "label_size"
 msgstr "Диаметр"
 msgid "label_price"
 msgstr "Цена"
+msgid "label_auto"
+msgstr "Авто"
 msgid "message_item_saved"
 msgstr "Цена сохранена"
 msgid "error_item_not_saved"
 msgstr "Не удается сохранить цену"
+msgid "error_size_empty"
+msgstr "укажите размер"
+msgid "error_price_empty"
+msgstr "укажите цену"
+msgid "error_auto_empty"
+msgstr "укажите авто"
+msgid "auto_suv"
+msgstr "SUV"
