--- a/app/Locale/rus/LC_MESSAGES/admin_tyre_prices.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_tyre_prices.po
@@ -8,6 +8,8 @@ msgid "title_list"
 msgstr "Список тарифов"
 msgid "size"
 msgstr "Диаметр"
+msgid "auto"
+msgstr "Авто"
 msgid "price"
 msgstr "Цена (руб.)"
 msgid "message_items_not_found"
