--- a/app/Locale/rus/LC_MESSAGES/admin_prices.po
+++ b/app/Locale/rus/LC_MESSAGES/admin_prices.po
@@ -13,7 +13,7 @@ msgstr "Тариф скрыт"
 msgid "column_id"
 msgstr "Код"
 msgid "column_title"
-msgstr "Название"
+msgstr "Диаметр"
 msgid "column_time"
 msgstr "Время операции, мин."
 msgid "column_type"
@@ -37,9 +37,9 @@ msgstr "Управляет видимостью данного тарифа на
 msgid "label_time"
 msgstr "Время операции, мин. (только число)"
 msgid "label_title"
-msgstr "Название услуги"
+msgstr "Диаметр"
 msgid "acronym_title"
-msgstr "Название услуги на сайте"
+msgstr "Диаметр"
 msgid "label_type"
 msgstr "Тип услуги"
 msgid "label_description"
@@ -47,7 +47,7 @@ msgstr "Описание тарифа"
 msgid "label_price"
 msgstr "Цена за услугу, %s"
 msgid "error_title_empty"
-msgstr "укажите название"
+msgstr "укажите размер"
 msgid "error_price_empty"
 msgstr "укажите цену"
 msgid "error_price_numeric"
